[package]
name = "rust-tf-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tonic = { version = "0.8", features = ["tls", "gzip"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
prost-types = "0.11"
tokio-stream = { version = "0.1", features = ["net"] }
listenfd = "1.0"
tonic-reflection = "0.5"
h2 = "0.3"
tokio-rustls = "*"
rustls-pemfile = "*"
once_cell = "1.16"

tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

base64 = "0.13"
image = "0.24"
tensorflow = "0.19"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
